# api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  db.py  main.py  queries.py
app/routers/: choropleth.py  health.py  transport.py
tests/: conftest.py  test_choropleth.py  test_health.py
