[project]
name = "homepedia-api"
version = "0.1.0"
description = "API read-only des données DVF (choroplèthe prix/m²)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "ruff>=0.12",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "PL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Les codes HTTP attendus dans les asserts ne sont pas des "magic values".
"tests/*" = ["PLR2004"]
